fixed button on mobile

--- a/meet-landing-page/src/output.css
+++ b/meet-landing-page/src/output.css
@@ -8,6 +8,7 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-red-600: oklch(57.7% 0.245 27.325);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
     --color-gray-500: oklch(55.1% 0.027 264.364);
@@ -23,6 +24,8 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-6xl: 3.75rem;
+    --text-6xl--line-height: 1;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
     --font-weight-extrabold: 800;
@@ -193,23 +196,29 @@
   .m-0 {
     margin: calc(var(--spacing) * 0);
   }
-  .m-7 {
-    margin: calc(var(--spacing) * 7);
-  }
   .m-14 {
     margin: calc(var(--spacing) * 14);
-  }
-  .m-24 {
-    margin: calc(var(--spacing) * 24);
   }
   .m-auto {
     margin: auto;
   }
+  .-mx-14 {
+    margin-inline: calc(var(--spacing) * -14);
+  }
+  .mx-2 {
+    margin-inline: calc(var(--spacing) * 2);
+  }
+  .mx-6 {
+    margin-inline: calc(var(--spacing) * 6);
+  }
   .mx-7 {
     margin-inline: calc(var(--spacing) * 7);
   }
-  .mx-auto {
-    margin-inline: auto;
+  .mx-20 {
+    margin-inline: calc(var(--spacing) * 20);
+  }
+  .my-12 {
+    margin-block: calc(var(--spacing) * 12);
   }
   .my-14 {
     margin-block: calc(var(--spacing) * 14);
@@ -241,23 +250,14 @@
   .min-h-screen {
     min-height: 100vh;
   }
-  .w-1\/2 {
-    width: calc(1/2 * 100%);
-  }
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .w-\[2s50px\] {
-    width: 2s50px;
+  .w-\[60\%\] {
+    width: 60%;
   }
-  .w-\[150px\] {
-    width: 150px;
-  }
-  .w-\[250px\] {
-    width: 250px;
-  }
-  .w-\[350px\] {
-    width: 350px;
+  .w-\[300px\] {
+    width: 300px;
   }
   .w-full {
     width: 100%;
@@ -270,9 +270,6 @@
   }
   .max-w-full {
     max-width: 100%;
-  }
-  .max-w-max {
-    max-width: max-content;
   }
   .max-w-xs {
     max-width: var(--container-xs);
@@ -297,9 +294,6 @@
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
-  }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
   }
   .gap-y-5 {
     row-gap: calc(var(--spacing) * 5);
@@ -344,32 +338,35 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
-  .p-6 {
-    padding: calc(var(--spacing) * 6);
-  }
-  .p-11 {
-    padding: calc(var(--spacing) * 11);
-  }
-  .p-24 {
-    padding: calc(var(--spacing) * 24);
-  }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
-  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
+  .px-9 {
+    padding-inline: calc(var(--spacing) * 9);
+  }
+  .px-11 {
+    padding-inline: calc(var(--spacing) * 11);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
+  }
+  .py-6 {
+    padding-block: calc(var(--spacing) * 6);
   }
   .py-7 {
     padding-block: calc(var(--spacing) * 7);
   }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
+  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
+  }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
   }
   .pb-9 {
     padding-bottom: calc(var(--spacing) * 9);
@@ -394,6 +391,10 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-6xl {
+    font-size: var(--text-6xl);
+    line-height: var(--tw-leading, var(--text-6xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
